--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous" />
 
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
 
@@ -60,7 +63,7 @@
     <!-- JUMBOTRON -->
     <section id="jumbotron">
       <div class="container-fliud banner">
-        <div class="container text-center">
+        <div class="container text-center"  data-aos="fade-up">
           <div class="animated">
             <h1 class="display-4">Hello, world!</h1>
             <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
@@ -120,6 +123,10 @@
     </section>
     <!-- ABOUT END -->
 
+    <!-- GALLERY -->
+        
+    <!-- GALLERY END-->
+
     <!-- FACULTY -->
     <section id="fakultas">
       <div class="container-fluid pt-4 pb-4">
@@ -135,7 +142,7 @@
           <div class="row pt-4 gx-4 gy-4">
             <div class="col-md-3">
               <div class="card">
-                <img src="img/teknik.jpg" class="card-img-top" alt="teknik dan informatika" />
+                <img src="/img/fakultas/teknik.jpg" class="card-img-top" alt="teknik dan informatika" />
                 <div class="card-body">
                   <h5 class="card-title">TEKNIK DAN INFORMATIKA</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -145,7 +152,7 @@
             </div>
             <div class="col-md-3">
               <div class="card">
-                <img src="img/bisnis.jpg" class="card-img-top" alt="teknik dan informatika" />
+                <img src="img/fakultas/bisnis.jpg" class="card-img-top" alt="ekonomi dan bisnis" />
                 <div class="card-body">
                   <h5 class="card-title">EKONOMI DAN BISNIS</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -155,7 +162,7 @@
             </div>
             <div class="col-md-3">
               <div class="card">
-                <img src="img/bahasa.jpg" class="card-img-top" alt="teknik dan informatika" />
+                <img src="/img/fakultas/bahasa.jpg" class="card-img-top" alt="bahasa dan budaya" />
                 <div class="card-body">
                   <h5 class="card-title">BAHASA DAN BUDAYA</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -165,7 +172,7 @@
             </div>
             <div class="col-md-3">
               <div class="card">
-                <img src="img/psikologi.jpg" class="card-img-top" alt="teknik dan informatika" />
+                <img src="/img/fakultas/psikologi.jpg" class="card-img-top" alt="psikologi" />
                 <div class="card-body">
                   <h5 class="card-title">PSIKOLOGI</h5>
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -185,8 +192,8 @@
         <div class="container">
           <div class="row pt-2 justify-content-center">
             <div class="col-md-6">
-              <div class="card" style="width: 30rem">
-                <img src="img/info.jpg" class="img-fluid" alt="info" />
+              <div class="card">
+                <img src="/img/info/info.jpg" class="img-fluid" alt="info" />
               </div>
             </div>
             <div class="col-md-5">
@@ -259,6 +266,10 @@
       <p class="pt-3">CopyRight 2022 - Universitas Borneo</p>
     </footer>
     <!-- FOOTER END-->
+
+    <!-- AOS SCRIPT -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script src="/js/app.js"></script>
 
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
