--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                 <h5>PENDAFTARAN ONLINE</h5>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores illum voluptatem veniam quia
                   minus autem corporis veritatis voluptate hic? Nisi.</p>
-                <a href="#" class="btn btn-primary">Cek selengkapnya</a>
+                <a href="/daftar/form.html" class="btn btn-primary">Cek selengkapnya</a>
               </div>
               <div class="col-12 pt-3 pb-3">
                 <h5>PROSEDUR PENDAFTARAN</h5>
